fix float wrapping

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -75,6 +75,10 @@ ul.no-style{
 	display: none;
 }
 
+.hide-overflow {
+	overflow: hidden;
+}
+
 .small-reading-width {
 	max-width: 60ch;
 	margin-inline: auto;
